{
  "version": 4,
  "terraform_version": "1.14.8",
  "serial": 24,
  "lineage": "dd1dcaef-3285-d69d-b6e3-55584f5060b9",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f3eab1a00f83e2db",
            "arn": "arn:aws:ec2:us-east-1:244170403731:elastic-ip/eipalloc-0f3eab1a00f83e2db",
            "association_id": "eipassoc-022799b7e4c76d19b",
            "domain": "vpc",
            "id": "eipalloc-0f3eab1a00f83e2db",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0b32c03acfd06bb5e",
            "private_dns": "ip-10-0-10-178.ec2.internal",
            "private_ip": "10.0.10.178",
            "public_dns": "ec2-35-174-140-217.compute-1.amazonaws.com",
            "public_ip": "35.174.140.217",
            "public_ipv4_pool": "amazon",
            "region": "us-east-1"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:244170403731:internet-gateway/igw-0a04b85b54bb449eb",
            "id": "igw-0a04b85b54bb449eb",
            "owner_id": "244170403731",
            "region": "us-east-1",
            "tags": {
              "Name": "Internet Gateway: vpc-pegasus-us-east-1"
            },
            "tags_all": {
              "Name": "Internet Gateway: vpc-pegasus-us-east-1"
            },
            "vpc_id": "vpc-0d2622b045a45b842"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.vpc-pegasus-us-east-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f3eab1a00f83e2db",
            "association_id": "eipassoc-022799b7e4c76d19b",
            "availability_mode": "zonal",
            "connectivity_type": "public",
            "id": "nat-042720d7ce776b74e",
            "network_interface_id": "eni-0b32c03acfd06bb5e",
            "private_ip": "10.0.10.178",
            "public_ip": "35.174.140.217",
            "region": "us-east-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0065143eb60051635",
            "tags": {
              "Name": "Private NAT: vpc-pegasus-us-east 1"
            },
            "tags_all": {
              "Name": "Private NAT: vpc-pegasus-us-east 1"
            },
            "vpc_id": "vpc-0d2622b045a45b842"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_subnet.aws_pegasus_private_subnet",
            "aws_vpc.vpc-pegasus-us-east-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "pegasus_private_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:244170403731:route-table/rtb-0715e9daca50b6a0d",
            "id": "rtb-0715e9daca50b6a0d",
            "owner_id": "244170403731",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-042720d7ce776b74e",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Private route - pegasus us east 1"
            },
            "tags_all": {
              "Name": "Private route - pegasus us east 1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d2622b045a45b842"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "244170403731",
            "id": "rtb-0715e9daca50b6a0d",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_nat_gateway.nat_gateway",
            "aws_subnet.aws_pegasus_private_subnet",
            "aws_vpc.vpc-pegasus-us-east-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "pegasus_public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:244170403731:route-table/rtb-0dc9ba4f148ab7ab4",
            "id": "rtb-0dc9ba4f148ab7ab4",
            "owner_id": "244170403731",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0a04b85b54bb449eb",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Public route - Pegasus us east 1"
            },
            "tags_all": {
              "Name": "Public route - Pegasus us east 1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d2622b045a45b842"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "244170403731",
            "id": "rtb-0dc9ba4f148ab7ab4",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_internet_gateway.internet_gateway",
            "aws_vpc.vpc-pegasus-us-east-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "aws_pegasus_private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:244170403731:subnet/subnet-0065143eb60051635",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0065143eb60051635",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "244170403731",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "vpc_id": "vpc-0d2622b045a45b842"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "244170403731",
            "id": "subnet-0065143eb60051635",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.vpc-pegasus-us-east-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "aws_pegasus_public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:244170403731:subnet/subnet-010d1132f8a4e05f3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-010d1132f8a4e05f3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "244170403731",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "vpc_id": "vpc-0d2622b045a45b842"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "244170403731",
            "id": "subnet-010d1132f8a4e05f3",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.vpc-pegasus-us-east-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc-pegasus-us-east-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:244170403731:vpc/vpc-0d2622b045a45b842",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0c280c115ab287e77",
            "default_route_table_id": "rtb-0e16b04c9024fecff",
            "default_security_group_id": "sg-0acc830b0484b91fd",
            "dhcp_options_id": "dopt-0eefc5effaa023da6",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0d2622b045a45b842",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0e16b04c9024fecff",
            "owner_id": "244170403731",
            "region": "us-east-1",
            "tags": {
              "Name": "vpc pegasus"
            },
            "tags_all": {
              "Name": "vpc pegasus"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "244170403731",
            "id": "vpc-0d2622b045a45b842",
            "region": "us-east-1"
          }
        }
      ]
    }
  ]
}